src/test/resources/org/nest/nestml/_cocos/invalid/componentHasNoDynamics.nestml
component CompWithDynamics:
    update:
    end
end